// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CFormCheck customize button=false 1`] = `
<div>
  <div
    class="form-check form-switch form-switch-xl form-check-inline bazinga"
  >
    <input
      class="form-check-input"
      id="id"
      type="radio"
    />
    <label
      class="form-check-label"
      for="id"
    >
      label
    </label>
  </div>
</div>
`;

exports[`CFormCheck customize button=true 1`] = `
<div>
  <div
    class="form-check form-switch form-switch-xl form-check-inline bazinga"
  >
    <input
      class="btn-check"
      id="id"
      type="radio"
    />
    <label
      class="btn btn-ghost-primary btn-lg buttonShape"
      for="id"
    >
      label
    </label>
  </div>
</div>
`;

exports[`loads and displays CFormCheck component 1`] = `
<div>
  <input
    class="form-check-input"
    type="checkbox"
  />
</div>
`;
